# FastAPI_pracitce

./: pyproject.toml
sql_app/: crud.py  database.py  main.py  model.py  schemas.py
