[tool.poetry]
name = "fastAPI_Practice"
version = "0.1.0"
description = "fastAPI 연습폴더"
authors = ["kmsdoit <klmmms882912@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
Jinja2 = "^3.1.1"
SQLAlchemy = "^1.4.35"
PyMySQL = "^1.0.2"
async_generator = "^1.10"
async-exit-stack = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
